--- a/ui/src/app/editor-v2/components/pipeline-element-options/pipeline-element-options.component.html
+++ b/ui/src/app/editor-v2/components/pipeline-element-options/pipeline-element-options.component.html
@@ -55,7 +55,7 @@
     </span>
     <span class="options-button help-button" style="z-index:10">
         <button matTooltip="Help" [matTooltipPosition]="'below'"
-                mat-button mat-icon-button ng-click="openHelpDialog()">?
+                mat-button mat-icon-button (click)="openHelpDialog()">?
             </button>
     </span>
     <div class="editor-pe-info" [ngClass]="'pe-info-' + pipelineElementCssType">
