--- a/ui/src/app/connect/new-adapter/component/dialog-adapter-started.html
+++ b/ui/src/app/connect/new-adapter/component/dialog-adapter-started.html
@@ -57,35 +57,10 @@
                     </div>
                 </div>
 
-                <div *ngIf="runtimeData === undefined && !isSetAdapter && !isTemplate">
-                    <div fxLayout="column">
-                        <div fxLayoutAlign="center" >
-                            <mat-spinner [diameter]="40" fxLayoutAlign="center" style="margin: 10px 0 5px 0" >Loading</mat-spinner>
-                        </div>
-                        <div fxLayoutAlign="center">
-                            <h3>Gathering data for live preview...</h3>
-                        </div>
-                    </div>
+                <div *ngIf="!isSetAdapter && !isTemplate">
+                    <pipeline-element-runtime-info [streamDescription]="streamDescription" [pollingActive]="pollingActive"></pipeline-element-runtime-info>
                 </div>
-                <div *ngIf="runtimeData !== undefined">
-                    <p>Here is a preview of your data:</p>
-                    <table class="dataTable row-border hover">
-                        <thead>
-                        <tr>
-                            <th>Runtime Name</th>
-                            <th>Value</th>
-                        </tr>
-                        </thead>
-                        <tbody id="preview-data-rows-id">
-                        <tr *ngFor="let property of streamDescription.eventSchema.eventProperties">
-                            <td>{{property.runtimeName}}</td>
-                            <td *ngIf="isImage(property)"> <img src="data:image/png;base64,{{runtimeData[property.properties.runtimeName]}}" style="max-width: 150px;" /> </td>
-                            <td *ngIf="isTimestamp(property)">{{runtimeData[property.runtimeName] | date:'yyyy-MM-dd HH:mm:ss '}}</td>
-                            <td *ngIf="hasNoDomainProperty(property)">{{runtimeData[property.runtimeName]}}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+
             </div>
             <div *ngIf="!adapterStatus.success">
                 Something went wrong during the adapter installation.
