--- a/ui/src/app/editor-v2/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
+++ b/ui/src/app/editor-v2/components/pipeline-element-icon-stand/pipeline-element-icon-stand.component.scss
@@ -15,3 +15,11 @@
  * limitations under the License.
  *
  */
+
+@import '../../../../scss/_variables.scss';
+
+.menu-text-color {
+    color: $sp-color-accent;
+    display: flex;
+    align-items: center;
+}
