--- a/ui/src/app/core-ui/image/image-labeling/image-labeling-description/image-labeling-description-dialog.component.html
+++ b/ui/src/app/core-ui/image/image-labeling/image-labeling-description/image-labeling-description-dialog.component.html
@@ -16,15 +16,15 @@
 ~
 -->
 
-<mat-toolbar>
+<!-- <mat-toolbar> -->
     <div class="mat-toolbar">
         <h2>Image Description</h2>
         <button mat-icon-button (click)="onCancel()">
             <i class="material-icons">close</i>
         </button>
     </div>
-</mat-toolbar>
-<mat-divider></mat-divider>
+<!-- </mat-toolbar> -->
+<!-- <mat-divider></mat-divider> -->
 <div mat-dialog-content class="md-dialog-content">
     <div fxFlex="100">
         <div fxFlex="100" style="margin:5px;width:100%">
@@ -35,7 +35,7 @@
         </div>
     </div>
 </div>
-<mat-divider></mat-divider>
+<!-- <mat-divider></mat-divider> -->
 <div mat-dialog-actions fxLayout="row" fxLayoutAlign="end center">
     <button mat-button mat-raised-button class="mat-basic" (click)="onCancel()">
         Close
