Working in grouping for line chart

--- a/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/line-chart/line-chart-widget.component.html
@@ -31,6 +31,11 @@
                     (update)="changeResolution($event)">
             </sp-aggregate-configuration>
 
+            <sp-group-configuration [dimensionProperties]="dimensionProperties"
+                    (update)="changeGroupingResolution($event)">
+            </sp-group-configuration>
+
+
             <button mat-icon-button matTooltip="Download data" class="icon" (click)="downloadDataAsFile()" color="white">
                 <i class="material-icons">get_app</i>
             </button>
