--- a/ui/src/app/data-explorer/components/widgets/utils/group-configuration/group-configuration.component.html
+++ b/ui/src/app/data-explorer/components/widgets/utils/group-configuration/group-configuration.component.html
@@ -19,13 +19,13 @@
 
 <div fxLayout="column" fxLayoutAlign="stretch" *ngIf="groupingAvailable">
     <div fxFlex="100" layout="row" fxLayoutAlign="end center" style="margin-left: 10px;margin-right: 0px;">
-        <mat-slide-toggle [(ngModel)]="groupingActive">Group</mat-slide-toggle>
-        <div  *ngIf="groupingActive" class="option" style="margin-left: 5px">
+        <!--        <mat-slide-toggle [(ngModel)]="groupingActive">Group</mat-slide-toggle>-->
+        <div  class="option" style="margin-left: 5px">
             <mat-form-field style="width: 100px">
-                <mat-select [(value)]="groupValue">
+                <mat-select [(ngModel)]="groupValue" (ngModelChange)="onModelChange($event,'groupValue')">
                     <mat-option
                             style="background-color: #FFFFFF" value="None">
-                       None
+                        None
                     </mat-option>
                     <mat-option
                             *ngFor="let property of this.dimensionProperties"
@@ -35,10 +35,13 @@
                 </mat-select>
                 <mat-label>Dimension</mat-label>
             </mat-form-field>
-<!--            <button mat-button mat-icon-button color="white" (click)="removeWidget()">-->
-            <button (click)="updateData()" mat-button mat-icon-button color="white">
-                <i class="material-icons">autorenew</i>
-            </button>
         </div>
+
+        <mat-checkbox
+                (ngModelChange)="onModelChange($event,'showCountValue')"
+                *ngIf="showCountValueCheckbox"
+                [(ngModel)]="showCountValue">
+            Count</mat-checkbox>
+
     </div>
 </div>
