--- a/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
@@ -46,15 +46,53 @@
             <ng-container *ngFor="let element of this.selectedColumns" [cdkColumnDef]="element.runtimeName">
 
                 <div *ngIf="!isTimestamp(element)">
-                    <!--                <td *ngIf="isTimestamp(property)">{{runtimeData[property.properties.runtimeName] | date:'yyyy-MM-dd HH:mm:ss '}}</td>-->
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header><label style="font-size: large">{{element.runtimeName}}</label></th>
-                    <td mat-cell *matCellDef="let row"style="text-align: center;">{{row[element.runtimeName]}}</td>
+                    <th mat-header-cell *matHeaderCellDef>
+                        <div class="header">
+                            {{element.runtimeName}}
+                          <button mat-button class="btn-toggle" [matMenuTriggerFor]="menu">
+                            <mat-icon>keyboard_arrow_down</mat-icon>
+                          </button>
+                
+                        </div>
+                        <mat-menu #menu>
+                          <div mat-menu-item   [disableRipple]="true" class="menu-title">
+                            {{element.runtimeName}}
+                          </div>
+                          
+                          <div mat-menu-item   [disableRipple]="true">
+                              <input (keyup)="applyFilter1($event.target.value)" (focus)="setupFilter(element.runtimeName)" />
+                          </div>
 
+                        </mat-menu>
+                      </th>
+                      <td mat-cell *matCellDef="let row"style="text-align: center;">{{row[element.runtimeName]}}</td>
                 </div>
-                <div *ngIf="isTimestamp(element)">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header><label style="font-size: large">{{element.runtimeName}}</label></th>
-                    <td mat-cell  *matCellDef="let row"style="text-align: left;">{{row[element.runtimeName]| date:'yyyy-MM-dd HH:mm:ss'}}</td>
 
+
+
+
+
+                <div *ngIf="isTimestamp(element)">
+                    <th mat-header-cell *matHeaderCellDef>
+                        <div class="header">
+                            {{element.runtimeName}}
+                          <button mat-button class="btn-toggle" [matMenuTriggerFor]="menu">
+                            <mat-icon>keyboard_arrow_down</mat-icon>
+                          </button>
+                
+                        </div>
+                        <mat-menu #menu>
+                          <div mat-menu-item   [disableRipple]="true" class="menu-title">
+                            {{element.runtimeName}}
+                          </div>
+                          
+                          <div mat-menu-item   [disableRipple]="true">
+                              <input (keyup)="applyFilter1($event.target.value)" (focus)="setupFilter(element.runtimeName)" />
+                          </div>
+                
+                        </mat-menu>
+                      </th>
+                      <td mat-cell  *matCellDef="let row"style="text-align: left;">{{row[element.runtimeName]| date:'yyyy-MM-dd HH:mm:ss'}}</td>
                 </div>
             </ng-container>
 
