--- a/ui/src/app/connect/static-properties/static-free-input/static-free-input.component.html
+++ b/ui/src/app/connect/static-properties/static-free-input/static-free-input.component.html
@@ -16,19 +16,16 @@
   ~
   -->
 
-<div id="formWrapper" fxFlex="100" fxLayout="column">
+<div [formGroup]="parentForm" id="formWrapper" fxFlex="100" fxLayout="column">
     <div fxFlex fxLayout="row">
-        <form fxFlex [formGroup]="freeTextForm">
             <mat-form-field fxFlex>
-                <input fxFlex id="{{ 'input-' + staticProperty.label.toLowerCase() }}" matInput [placeholder]="staticProperty.label" [(ngModel)]="staticPropertyUtil.asFreeTextStaticProperty(staticProperty).value"
-                    formControlName="freeStaticText" (ngModelChange)="valueChange(staticPropertyUtil.asFreeTextStaticProperty(staticProperty).value)"
+                <input formControlName="{{staticProperty.internalName}}" fxFlex id="{{ 'input-' + staticProperty.label.toLowerCase() }}" matInput [placeholder]="staticProperty.label"
                     required (blur)="emitUpdate()">
                 <mat-hint>{{staticProperty.description}}</mat-hint>
 
-                <mat-error *ngIf="!hasInput">
+                <mat-error *ngIf="!fieldValid">
                     {{errorMessage}}
                 </mat-error>
             </mat-form-field>
-        </form>
     </div>
 </div>
