--- a/ui/src/app/connect/static-properties/static-secret-input/static-secret-input.component.html
+++ b/ui/src/app/connect/static-properties/static-secret-input/static-secret-input.component.html
@@ -16,19 +16,21 @@
   ~
   -->
 
-<div id="formWrapper" fxFlex="100" fxLayout="column">
+<div [formGroup]="parentForm" id="formWrapper" fxFlex="100" fxLayout="column">
     <div fxFlex="100" fxLayout="row">
-        <form [formGroup]="secretForm" fxFlex="100">
             <mat-form-field fxFlex >
-                <input type="password" fxFlex id="{{ 'input-' + staticProperty.label.toLowerCase() }}" matInput [placeholder]="staticProperty.label" [(ngModel)]="staticPropertyUtil.asSecretStaticProperty(staticProperty).value"
-                       formControlName="secretStaticProperty" (ngModelChange)="valueChange(staticPropertyUtil.asSecretStaticProperty(staticProperty).value)"
-                       required (blur)="emitUpdate()">
+                <input type="password"
+                       fxFlex
+                       formControlName="{{staticProperty.internalName}}"
+                       matInput
+                       [placeholder]="staticProperty.label"
+                       required
+                       (blur)="emitUpdate()">
                 <mat-hint>{{staticProperty.description}}</mat-hint>
 
-                <mat-error *ngIf="!hasInput">
-                    {{staticProperty.errorMessage}}
+                <mat-error *ngIf="!fieldValid">
+                    {{errorMessage}}
                 </mat-error>
             </mat-form-field>
-        </form>
     </div>
 </div>
