[STREAMPIPES-145] Switch serialization format of worker registration

--- a/ui/src/app/connect/data-marketplace/data-marketplace.component.html
+++ b/ui/src/app/connect/data-marketplace/data-marketplace.component.html
@@ -83,7 +83,7 @@
 
     </div>
 
-    <div class="box" class="container-fluid marketplace-container">
+    <div class="container-fluid marketplace-container">
         <div *ngIf="selectedIndex === 0">
 
             <div *ngIf="newAdapterFromDescription===undefined" fxLayout="row wrap" fxLayoutAlign="start stretch" class="adapter-description-container">
